# dtb_parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  parse_dtb.cpp  parse_dtb.h
dtb_files/: bcm2708-rpi-b-rev1
